--- a/Mackerel-Core/Mackerel-Core.vcxproj.filters
+++ b/Mackerel-Core/Mackerel-Core.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="Source Files\ImGui\Backends">
       <UniqueIdentifier>{7d3d0de6-0d7b-4636-8548-b7402aae43e1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\GLAD">
+      <UniqueIdentifier>{57d61343-3c07-413d-9e72-a6bd069023c1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\GLAD">
+      <UniqueIdentifier>{986a2fac-b29b-4e30-ab06-bf5f1c5d4441}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Window.cpp">
@@ -50,6 +56,9 @@
     </ClCompile>
     <ClCompile Include="ext\Dear-ImGui 1.89.2\backends\imgui_impl_glfw.cpp">
       <Filter>Source Files\ImGui\Backends</Filter>
+    </ClCompile>
+    <ClCompile Include="ext\GLAD\src\glad.c">
+      <Filter>Source Files\GLAD</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -82,6 +91,12 @@
     </ClInclude>
     <ClInclude Include="ext\Dear-ImGui 1.89.2\imstb_truetype.h">
       <Filter>Header Files\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="ext\GLAD\include\glad\glad.h">
+      <Filter>Header Files\GLAD</Filter>
+    </ClInclude>
+    <ClInclude Include="ext\GLAD\include\KHR\khrplatform.h">
+      <Filter>Header Files\GLAD</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
